# teensy-keyboard-bridge

./: .gitconfig  .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
firmware/: Cargo.toml
firmware/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: main.rs
