[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
dialoguer = { version = "0.11.0", default-features = false, features = ["fuzzy-select"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-serial = "5.4.4"
tokio-util = { version = "0.7.13", features = ["full"] }
enumflags2 = { version = "0.7", features = ["serde"] }
evdev = { version = "0.12.2", features = ["tokio"] }

# pinnded for consistency between crates
# using a workspace broke rust-analyser ??? :(
serde = { version = "1.0.216", default-features = false, features = ["derive"] }
usbd-hid = "0.8.2"
postcard = "1.1.1"

shared = { path = "../shared" }

