[package]
name = "firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
rtic = { version = "2", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "2", default-features = false, features = ["cortex-m-systick"] }
teensy4-panic = { version = "0.2" }
teensy4-bsp = { version = "0.5", features = [ "rt" ] }
usb-device = "0.3"
usbd-serial = "0.2"
heapless = "0.8"

# pinnded for consistency between crates
# using a workspace broke rust-analyser ??? :(
usbd-hid = "0.8.2"
serde = { version = "1.0.216", default-features = false, features = ["derive"] }
postcard = "1.1.1"

shared = { path = "../shared" }

[patch.crates-io.teensy4-bsp]
git = "https://github.com/tritoke/teensy4-rs"
rev = "0ddfd4d84100898b2b7216e6369fe1990f436373"
