[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
enumflags2 = { version = "0.7", features = ["serde"] }

# pinnded for consistency between crates
# using a workspace broke rust-analyser ??? :(
usbd-hid = "0.8.2"
serde = { version = "1.0.216", default-features = false, features = ["derive"] }
postcard = "1.1.1"
